# datasette-atom

./: .gitignore  README.md  pyproject.toml  setup.py
.circleci/: config.yml
.github/workflows/: publish.yml  test.yml
datasette_atom/: __init__.py
datasette_atom/templates/: configure_atom.html
tests/: test_atom.py  utils.py
